# ca_tech

./: .gitignore  CA Tech Lounge.gslides  README.md  pyproject.toml
 code/: analysis.ipynb  deprecated_question2.ipynb
code/: analysis.ipynb  question2.R
data/: model_params.json  optuna_lgb.pkl  optuna_params.json  optuna_tabnet_study.pkl  shap_values.pkl
