[tool.poetry]
name = "polars"
version = "0.1.0"
description = ""
authors = ["yuki-cossy <domokomod5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "<1.24"
optuna = "^3.1.1"
lightgbm = "^3.3.5"
scikit-learn = "^1.2.2"
pandas = "^2.0.0"
matplotlib = "^3.7.1"
pymc = "^5.2.0"
arviz = "^0.15.1"
pytensor = "2.10.1"
numpyro = "^0.11.0"
jax = "^0.4.8"
eli5 = "^0.13.0"
shap = "^0.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
